[package]
name = "rocket-playground"
version = "0.1.0"
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]

[dependencies]
base64 = "0.7"
error-chain = "0.11"
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
